# hermes-slack-extension

./: .gitignore  LICENSE  README.ko.md  README.md  TUTORIAL.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
hermes_slack_ext/: cli.py
hermes_slack_ext/board/hermes-board/: SKILL.md
hermes_slack_ext/core/: backups.py  hermes.py  manifest.py  patcher.py  profiles.py  secrets.py  slack_api.py  state.py  teardown.py  tts.py
hermes_slack_ext/meeting/: business-persona-presets.yaml  channel-prompts.yaml  default_profiles.yaml  profile-config-snippets.yaml  tts-options.yaml  tts-voices.yaml
hermes_slack_ext/meeting/hermes-meeting/: SKILL.md
hermes_slack_ext/overlays/tests/: test_slack_kanban_board.py  test_slack_meeting_room.py
hermes_slack_ext/wizard/: engine.py  prompts.py
scripts/: install-remote.sh
tests/e2e/: test_bootstrap_smoke.py  test_doctor.py  test_headless_board_install.py  test_headless_meeting_setup.py  test_uninstall.py
tests/fixtures/: pyproject_0151.toml  slack_min.py
tests/unit/: test_backups.py  test_cli_smoke.py  test_hermes.py  test_hermes_config.py  test_manifest.py  test_meeting_assets.py  test_patcher.py  test_patcher_meeting.py  test_profiles.py  test_secrets.py  test_slack_api.py  test_state.py  test_teardown.py
tests/wizard/: test_board_step.py  test_engine.py  test_install_record.py  test_meeting_profiles.py  test_meeting_runtime.py  test_moderator_app.py  test_prompts.py  test_slack_apps.py  test_slack_config_token.py  test_slash_swap_step.py  test_steps.py  test_tts_step.py  test_wireup.py
(+11 files in other folders)
