[project]
name = "hermes-slack-extension"
version = "0.1.0"
description = "Deterministic installer wizard for Hermes Slack /board and /meeting"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hermes-ext = "hermes_slack_ext.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_slack_ext*"]
